--- a/app/src/main/res/layout-land/fragment_step_detail.xml
+++ b/app/src/main/res/layout-land/fragment_step_detail.xml
@@ -10,4 +10,12 @@
         android:layout_height="match_parent"
          />
 
+    <ImageView
+        android:id="@+id/step_thumbnail"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/image_thumbnail_content_desc"
+        android:visibility="invisible"
+        />
+
 </FrameLayout>
