--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -16,9 +16,7 @@
             android:id="@+id/recipe_details_ingredients_card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
+
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,6 +35,7 @@
                     android:layout_marginTop="8dp"
                     android:gravity="center"
                     android:text="@string/recipe_details_ingredients_title"
+                    android:textStyle="bold"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -73,8 +72,6 @@
                 android:id="@+id/recipe_details_steps_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="20dp">
 
                 <android.support.constraint.ConstraintLayout
@@ -90,6 +87,7 @@
                         android:layout_marginTop="16dp"
                         android:gravity="center"
                         android:text="@string/recipe_details_cooking_directions_label"
+                        android:textStyle="bold"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
