--- a/app/src/main/res/layout/steps_list_item_view.xml
+++ b/app/src/main/res/layout/steps_list_item_view.xml
@@ -40,11 +40,9 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
         android:background="#E0E0E0"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/recipe_step_description"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recipe_step_description" />
 
 </android.support.constraint.ConstraintLayout>
