Added two pane layout

--- a/app/src/main/res/values-land/bools.xml
+++ b/app/src/main/res/values-land/bools.xml
@@ -2,4 +2,5 @@
 <resources>
     <bool name="isTablet">false</bool>
     <bool name="isLandscape">true</bool>
+    <bool name="isPortrait">false</bool>
 </resources>
