--- a/app/src/main/res/values-sw600dp/bools.xml
+++ b/app/src/main/res/values-sw600dp/bools.xml
@@ -2,4 +2,5 @@
 <resources>
     <bool name="isTablet">true</bool>
     <bool name="isLandscape">false</bool>
+    <bool name="isPortrait">false</bool>
 </resources>
