Optimized code structure for dynamic layouts

--- a/app/src/main/res/layout-sw600dp/activity_recipe_details.xml
+++ b/app/src/main/res/layout-sw600dp/activity_recipe_details.xml
@@ -24,8 +24,11 @@
 
     <View
         android:id="@+id/seperator"
-        android:layout_width="1dp"
-        android:layout_height="match_parent" />
+        android:layout_width="3dp"
+        android:layout_height="match_parent"
+        android:background="@color/color_line_seperator"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        tools:layout_editor_absoluteY="16dp" />
 
     <FrameLayout
         android:id="@+id/step_detail_frame"
@@ -33,7 +36,7 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toEndOf="@+id/seperator"
         app:layout_constraintTop_toTopOf="parent" />
 
 
