--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorPrimaryLight">#C5CAE9</color>
     <color name="colorWhite">#ffff</color>
+    <color name="color_line_seperator">#E0E0E0</color>
 </resources>
