--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -38,14 +38,14 @@
                     android:layout_marginTop="8dp"
                     android:gravity="center"
                     android:text="@string/recipe_details_ingredients_title"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textSize="25sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/recipe_details_ingredient_item"
+                <RelativeLayout
+                    android:id="@+id/recipe_details_ingredient_list_container"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
@@ -54,8 +54,14 @@
                     android:layout_marginTop="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/recipe_details_ingredients_view_title"
-                    app:layout_constraintTop_toBottomOf="@+id/recipe_details_ingredients_view_title"
-                    tools:text="\u2022 \t 3 Cups Spinach" />
+                    app:layout_constraintTop_toBottomOf="@+id/recipe_details_ingredients_view_title">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recipe_details_ingredient_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+
+                </RelativeLayout>
 
                 <TextView
                     android:id="@+id/recipe_details_add_to_widget_btn"
@@ -64,13 +70,29 @@
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="30dp"
                     android:text="@string/recipe_details_add_to_widget_btn_text"
                     android:textColor="@color/colorAccent"
                     android:textSize="15sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="@+id/recipe_details_ingredient_item"
-                    app:layout_constraintTop_toBottomOf="@+id/recipe_details_ingredient_item" />
+                    app:layout_constraintStart_toStartOf="@+id/recipe_details_ingredient_list_container"
+                    app:layout_constraintTop_toBottomOf="@+id/recipe_details_ingredient_list_container" />
+
+                <TextView
+                    android:id="@+id/recipe_details_unpin_widget_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginTop="30dp"
+                    android:visibility="invisible"
+                    android:text="@string/recipe_details_unpin_widget_text"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="15sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/recipe_details_ingredient_list_container"
+                    app:layout_constraintTop_toBottomOf="@+id/recipe_details_ingredient_list_container" />
 
             </android.support.constraint.ConstraintLayout>
 
@@ -107,9 +129,9 @@
                         android:layout_marginEnd="8dp"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="16dp"
+                        android:textSize="25sp"
                         android:gravity="center"
                         android:text="@string/recipe_details_cooking_directions_label"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
