--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#FFEB3B</color>
+    <color name="colorPrimaryDark">#FDD835</color>
+    <color name="colorAccent">#009688</color>
     <color name="colorPrimaryLight">#C5CAE9</color>
     <color name="colorWhite">#ffff</color>
     <color name="color_line_seperator">#E0E0E0</color>
+    <color name="color_background">#FAFAFA</color>
 </resources>
