--- a/app/src/main/res/layout/fragment_step_detail.xml
+++ b/app/src/main/res/layout/fragment_step_detail.xml
@@ -25,6 +25,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:visibility="invisible"
+        android:contentDescription="@string/step_thumbnail_imgView_content_desc"
         />
 
     <android.support.constraint.Guideline
@@ -56,7 +57,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/threeFourthHalf"
-        app:srcCompat="@drawable/ic_navigate_before_white_24dp" />
+        app:srcCompat="@drawable/ic_navigate_before_white_24dp"
+        android:contentDescription="@string/back_navigate_content_desc"/>
 
     <TextView
         android:id="@+id/step_detail_step_number_view"
@@ -86,7 +88,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/threeFourthHalf"
-        app:srcCompat="@drawable/ic_navigate_next_white_24dp" />
+        app:srcCompat="@drawable/ic_navigate_next_white_24dp"
+        android:contentDescription="@string/next_btn_content_desc"/>
 
     <ScrollView
         android:id="@+id/card_scroller"
