Added Offline mode messages

--- a/app/src/main/res/layout-land/fragment_step_detail.xml
+++ b/app/src/main/res/layout-land/fragment_step_detail.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
 
@@ -17,5 +20,48 @@
         android:contentDescription="@string/image_thumbnail_content_desc"
         android:visibility="invisible"
         />
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#000"
+        android:id="@+id/land_error_constraints"
+        >
+
+
+        <TextView
+            android:id="@+id/no_internet_message"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:textColor="@color/colorWhite"
+            android:text="@string/no_internet_message_text"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="invisible"/>
+
+        <Button
+            android:id="@+id/refresh_media_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/colorAccent"
+            android:textColor="@color/colorWhite"
+            android:text="@string/refresh_btn_txt"
+            app:layout_constraintEnd_toEndOf="@+id/no_internet_message"
+            app:layout_constraintStart_toStartOf="@+id/no_internet_message"
+            app:layout_constraintTop_toBottomOf="@+id/no_internet_message"
+            android:visibility="invisible"/>
+
+    </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
