--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,33 @@
         android:layout_marginBottom="16dp"/>
 
 
+    <TextView
+        android:id="@+id/error_text_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="150dp"
+        android:gravity="center"
+        android:text="@string/main_activity_error_msg"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/refresh_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/colorWhite"
+        android:textSize="16sp"
+        app:srcCompat= "@drawable/ic_refresh_blue_24dp"
+        app:layout_constraintEnd_toEndOf="@+id/error_text_view"
+        app:layout_constraintStart_toStartOf="@+id/error_text_view"
+        app:layout_constraintTop_toBottomOf="@+id/error_text_view" />
+
+
 </android.support.constraint.ConstraintLayout>
