--- a/app/src/main/res/layout/recipe_list_row_item.xml
+++ b/app/src/main/res/layout/recipe_list_row_item.xml
@@ -12,7 +12,8 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/recycler_view_selector">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -22,17 +23,17 @@
             <TextView
                 android:id="@+id/recipe_name_view"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginBottom="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
-                tools:text="Cheese Cake"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                app:layout_constraintBottom_toTopOf="@+id/view_recipe_text_view"
                 app:layout_constraintEnd_toStartOf="@+id/ingredient_count_label"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintStart_toEndOf="@+id/image_guideline"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Cheese Cake" />
 
             <TextView
                 android:id="@+id/ingredient_count_label"
@@ -57,16 +58,26 @@
                 app:layout_constraintTop_toBottomOf="@+id/ingredient_count_label"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
 
-            <TextView
-                android:id="@+id/view_recipe_text_view"
+           <android.support.constraint.Guideline
+               android:id="@+id/image_guideline"
+               android:layout_width="1dp"
+               android:layout_height="match_parent"
+               app:layout_constraintGuide_percent="0.3"
+               android:orientation="vertical"
+               />
+
+            <ImageView
+                android:id="@+id/recipe_image"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:text="@string/view_recipe_btn_text"
-                android:textColor="@color/colorAccent"
-                android:padding="2dp"
+                android:layout_height="match_parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/recipe_name_view" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/image_guideline"
+                tools:srcCompat="@drawable/cupcake_logo"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"/>
+
 
         </android.support.constraint.ConstraintLayout>
 
