Configured automatic signing

--- a/app/src/main/res/layout/steps_list_item_view.xml
+++ b/app/src/main/res/layout/steps_list_item_view.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/recycler_view_selector">
+    android:foreground="?android:attr/selectableItemBackground"
+    app:background="?android:attr/selectableItemBackground">
 
 
     <TextView
@@ -15,9 +16,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,6 +32,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/recipe_step_short_descripton"
@@ -39,6 +44,8 @@
         android:id="@+id/seperator"
         android:layout_width="0dp"
         android:layout_height="1dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:background="@color/color_line_seperator"
         app:layout_constraintEnd_toEndOf="parent"
