--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,19 +1,55 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
         android:width="108dp"
         android:height="108dp"
-        android:viewportWidth="481.1881"
-        android:viewportHeight="481.1881"
+        android:viewportWidth="112.75546"
+        android:viewportHeight="112.75546"
         android:autoMirrored="true">
-    <group android:translateX="92.09406"
-            android:translateY="92.09406">
-        <path android:fillColor="#5E4534" android:pathData="M148.5,148.5m-148.5,0a148.5,148.5 0,1 1,297 0a148.5,148.5 0,1 1,-297 0"/>
-        <path android:fillColor="#503B2C" android:pathData="M296.574,137.191l-49.736,-49.736L59.037,207.795l89.156,89.201c0.103,0 0.205,0.004 0.307,0.004c82.014,0 148.5,-66.486 148.5,-148.5C297,144.695 296.856,140.924 296.574,137.191z"/>
-        <path android:fillColor="#E59A51" android:pathData="M249.132,90.49c12.425,21.46 -28.493,51.085 -82.143,82.148S67.274,224.437 54.85,202.977s13.495,-76.99 67.145,-108.052S236.707,69.03 249.132,90.49z"/>
-        <path android:fillColor="#C67030" android:pathData="M127.721,132.955c3.428,-0.507 4.793,-4.738 2.271,-7.115c-5.752,-5.422 -15.312,-13.598 -25.712,-19.063c-6.694,5.127 -12.801,10.61 -18.288,16.283C94.119,130.824 107.93,135.883 127.721,132.955z"/>
-        <path android:fillColor="#D87D39" android:pathData="M249.132,90.49c-10.355,-17.885 -54.491,-24.448 -99.965,-8.161v100.376c5.82,-3.195 11.772,-6.564 17.822,-10.067C220.638,141.576 261.557,111.95 249.132,90.49z"/>
-        <path android:fillColor="#C67030" android:pathData="M93.26,161.17c2.568,-0.38 3.589,-3.548 1.701,-5.329c-4.998,-4.711 -13.834,-12.201 -23.041,-16.07c-3.542,4.874 -6.643,9.765 -9.276,14.577C68.804,159.826 78.944,163.288 93.26,161.17z"/>
-        <path android:fillColor="#C67030" android:pathData="M163.882,111.057c3.462,0.156 5.609,-3.736 3.586,-6.551c-4.237,-5.898 -11.186,-14.69 -19.395,-21.781c-7.786,2.85 -15.603,6.371 -23.289,10.624C131.274,102.536 143.873,110.154 163.882,111.057z"/>
-        <path android:fillColor="#B25D24" android:pathData="M167.468,104.506c-4.046,-5.633 -10.571,-13.904 -18.301,-20.813v25.22c4.379,1.139 9.262,1.898 14.715,2.144C167.344,111.213 169.49,107.321 167.468,104.506z"/>
-        <path android:fillColor="#B25D24" android:pathData="M204.528,93.058c2.567,0.387 4.47,-2.344 3.184,-4.599c-2.346,-4.115 -6.053,-10.027 -10.642,-15.399c-6.711,0.179 -13.792,0.88 -21.092,2.155C179.677,83.181 188.631,90.658 204.528,93.058z"/>
+    <group android:translateX="6.377731"
+            android:translateY="6.377731">
+        <path android:fillColor="#FEC97E"
+            android:pathData="M26,48c0,-8.464 4.381,-15.905 11,-20.178C40.746,25.404 45.208,24 50,24c4.374,0 8.471,1.169 12.002,3.211C69.174,31.361 74,39.117 74,48"
+            android:strokeColor="#000000" android:strokeLineCap="round"
+            android:strokeLineJoin="round" android:strokeWidth="2"/>
+        <path android:fillColor="#F06C52" android:pathData="M74,56l-4.851,16.169C68.518,74.276 66.2,76 64,76H36c-2.2,0 -4.517,-1.724 -5.149,-3.831L26,56"/>
+        <path android:fillColor="#00000000"
+            android:pathData="M74,56l-4.851,16.169C68.518,74.276 66.2,76 64,76H36c-2.2,0 -4.517,-1.724 -5.149,-3.831L26,56"
+            android:strokeColor="#000000" android:strokeWidth="2"/>
+        <path android:fillColor="#FEC97E"
+            android:pathData="M74,48c2.201,0 4,1.8 4,4l0,0c0,2.199 -1.799,4 -4,4H26c-2.201,0 -4,-1.801 -4,-4l0,0c0,-2.2 1.799,-4 4,-4"
+            android:strokeColor="#000000" android:strokeLineCap="round"
+            android:strokeLineJoin="round" android:strokeWidth="2"/>
+        <path android:fillColor="#FEC97E"
+            android:pathData="M70,48h4c2.201,0 4,1.8 4,4l0,0c0,2.199 -1.799,4 -4,4H26c-2.201,0 -4,-1.801 -4,-4l0,0c0,-2.2 1.799,-4 4,-4h4"
+            android:strokeColor="#000000" android:strokeLineCap="round"
+            android:strokeLineJoin="round" android:strokeWidth="2"/>
+        <path android:fillColor="#FEC97E" android:pathData="M36,48L50,48"
+            android:strokeColor="#000000" android:strokeLineCap="round"
+            android:strokeLineJoin="round" android:strokeWidth="2"/>
+        <path android:fillColor="#FFFFFF" android:pathData="M50,76L50,62"
+            android:strokeColor="#000000" android:strokeLineCap="round"
+            android:strokeLineJoin="round" android:strokeWidth="2"/>
+        <path android:fillColor="#FFFFFF" android:pathData="M58,76L62,64"
+            android:strokeColor="#000000" android:strokeLineCap="round"
+            android:strokeLineJoin="round" android:strokeWidth="2"/>
+        <path android:fillColor="#FFFFFF" android:pathData="M42,76L38,64"
+            android:strokeColor="#000000" android:strokeLineCap="round"
+            android:strokeLineJoin="round" android:strokeWidth="2"/>
+        <path android:fillColor="#00000000" android:pathData="M45,32L46,31"
+            android:strokeColor="#F6A572" android:strokeLineCap="round"
+            android:strokeLineJoin="round" android:strokeWidth="2"/>
+        <path android:fillColor="#00000000"
+            android:pathData="M34.529,40.585L35,42"
+            android:strokeColor="#F6A572" android:strokeLineCap="round"
+            android:strokeLineJoin="round" android:strokeWidth="2"/>
+        <path android:fillColor="#00000000"
+            android:pathData="M61,33L61.998,33.999"
+            android:strokeColor="#F6A572" android:strokeLineCap="round"
+            android:strokeLineJoin="round" android:strokeWidth="2"/>
+        <path android:fillColor="#00000000" android:pathData="M65,43L66,42"
+            android:strokeColor="#F6A572" android:strokeLineCap="round"
+            android:strokeLineJoin="round" android:strokeWidth="2"/>
+        <path android:fillColor="#00000000" android:pathData="M50,40L51,39"
+            android:strokeColor="#F6A572" android:strokeLineCap="round"
+            android:strokeLineJoin="round" android:strokeWidth="2"/>
     </group>
 </vector>
