--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -71,6 +71,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginBottom="16dp"
                     android:layout_marginTop="30dp"
+                    android:textStyle="bold"
                     android:text="@string/recipe_details_add_to_widget_btn_text"
                     android:textColor="@color/colorAccent"
                     android:textSize="15sp"
@@ -83,6 +84,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
+                    android:textStyle="bold"
                     android:layout_centerHorizontal="true"
                     android:layout_marginBottom="16dp"
                     android:layout_marginTop="30dp"
@@ -103,10 +105,6 @@
             android:id="@+id/recipe_details_relative_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recipe_details_ingredients_card_view">
@@ -116,11 +114,16 @@
                 android:id="@+id/recipe_details_steps_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                >
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    >
 
                     <TextView
                         android:id="@+id/recipe_details_step_title"
