--- a/app/src/main/res/layout/recipe_list_row_item.xml
+++ b/app/src/main/res/layout/recipe_list_row_item.xml
@@ -13,7 +13,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/recycler_view_selector">
+        android:foreground="?android:attr/selectableItemBackground"
+        app:background="?android:attr/selectableItemBackground">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -26,8 +27,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginLeft="24dp"
                 android:layout_marginTop="16dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 app:layout_constraintEnd_toStartOf="@+id/ingredient_count_label"
@@ -76,7 +77,7 @@
                 app:layout_constraintRight_toLeftOf="@+id/image_guideline"
                 tools:srcCompat="@drawable/cupcake_logo"
                 android:adjustViewBounds="true"
-                android:scaleType="fitXY"/>
+                android:scaleType="centerCrop"/>
 
 
         </android.support.constraint.ConstraintLayout>
