--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFEB3B</color>
-    <color name="colorPrimaryDark">#fdd835</color>
-    <color name="colorAccent">#009688</color>
+    <color name="colorPrimary">#795548</color>
+    <color name="colorPrimaryDark">#5D4037</color>
+    <color name="colorAccent">#4E342E</color>
     <color name="colorPrimaryLight">#C5CAE9</color>
     <color name="colorWhite">#ffff</color>
     <color name="color_line_seperator">#E0E0E0</color>
